# dynamic-workforce

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
data/: training_data.csv
infrastructure/terraform/: iam.tf  main.tf  outputs.tf
lambda/: handler.py
sagemaker/: deploy_endpoint.py  inference.py  requirements.txt
src/: __init__.py
src/sagemaker/: __init__.py
src/sagemaker/sagemaker/: train_model.py
terraform/: variables.tf
tests/unit/: test_predictor.py
